<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/default_margin"
            android:background="@color/black"
            tools:context=".activity.CategoryListActivity">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/loginImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/category_list_bg"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/transparent"
                android:src="@drawable/back_icon"
                android:layout_margin="@dimen/default_margin"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:color/transparent"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/done_txt"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/categoryListTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/category_list_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_22"
                android:layout_marginTop="@dimen/margin_top_category_title"
                android:layout_marginHorizontal="@dimen/default_margin"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/categoryListBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/categoryListTitle"
                android:text="@string/category_list_body_msg"
                android:textColor="@color/white_with_82_alpha"
                android:textSize="@dimen/text_size_14"
                android:layout_marginHorizontal="@dimen/default_margin"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/categoryListBody"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"/>

            <include
                android:id="@+id/loading_bar"
                layout="@layout/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="com.miagi.testappkotlin.viewmodel.CategoryListViewModel" />
    </data>


</layout>
